# deep_learning

./: .gitignore  README.html  README.md  SETUP.md  TF_CPU_ENV_SETUP.md  assignment_1.ipynb  assignment_2.ipynb  lab_1.ipynb  pyproject.toml
01-slides/Lecture 10/: index.html
01-slides/Lecture 2/: index.html
01-slides/Lecture 3/: index.html
01-slides/Lecture 4/: index.html
01-slides/Lecture 5/: index.html
01-slides/Lecture 6/: index.html
01-slides/Lecture 8/: index.html
01-slides/Lecture 9/: index.html  slides.css
01_materials/labs/: lab1test.py  lab_1.ipynb  lab_1_1.ipynb  lab_2.ipynb  lab_3.ipynb  lab_4.ipynb  lab_5.ipynb  lab_6.ipynb  lab_8.ipynb  voc_umap_vis.py  yolo_visualization.ipynb
01_materials/notes/: identity_matrix_onehot_explanation.md  module_1_intro_to_deep_learning.md  module_2_neural_networks.md  module_2_summary.md  module_3_note.md
01_materials/slides/: remark.min.js
02-labs/: lab_1.ipynb  lab_10.ipynb  lab_5.ipynb  lab_6.ipynb
02_activities/assignments/: assignment_1.ipynb  assignment_1_1.ipynb  assignment_2.ipynb  lab_1.ipynb  lab_2.ipynb  lab_3.ipynb  lab_4.ipynb  lab_6.ipynb
02_labs/: lab_2.ipynb  lab_4.ipynb  lab_5.ipynb  lab_6.ipynb
03-assignments/: assignment_1.ipynb  assignment_1_SampleAnswers.ipynb  assignment_2.ipynb
03_assignments/: assignment_1.ipynb  assignment_2.ipynb
03_instructional_team/: README.md  generate_slides.sh
03_instructional_team/markdown_slides/: 01_introduction.md  02_neural_networks_and_backpropagation.md  (+4 more)
04-instructors/: README.md
04_instructional_team/: README.md
04_instructors/: README.md  snake_case_replacer.sh
assignments/: Assignment_1.ipynb  Assignment_2.ipynb
notebooks/: Lab_1.ipynb  Lab_10.ipynb  Lab_2.ipynb  Lab_3.ipynb  Lab_4.ipynb  Lab_4a.ipynb  Lab_4b.ipynb  Lab_7.ipynb  Lab_8.ipynb  english_numbers.py
(+38 files in other folders)
